Fix .theme-toggle positioning on mobile

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1240,7 +1240,7 @@ button.tab:focus {
 	}
 
 	.theme-toggle {
-		margin: 1rem 5rem;
+		margin: 1rem 6rem;
 	}
 
 	nav>div.navbar-links.expanded>.close-navigation {
